aws/projects/Lesson_Solutions/Project_1/lesson_cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This Cloudformation Template was written for running Kittens Carousel Static Website on EC2. 
  This website will be deployed on Linux 2 (ami-0742b4e673072066f) EC2 instance with custom security group 
  which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static website is dowloaded 
  from Public Github repository, then deployed on Apache Web Server. 
  
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache web server and SSH for secure connection #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80 
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0742b4e673072066f
      InstanceType: t2.micro
      KeyName: mykey1
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash

            yum update -y
            yum install -y httpd
            systemctl start httpd
            cd /var/www/html/
            chmod -R 777 /var/www/html
            rm index.html
            FOLDER="https://raw.githubusercontent.com/enes789/aws-devops/main/aws/projects/101-kittens-carousel-static-website-ec2/static-web"
            wget $FOLDER/index.html 
            wget $FOLDER/cat0.jpg 
            wget $FOLDER/cat1.jpg
            wget $FOLDER/cat2.jpg

            systemctl restart httpd
            systemctl enable httpd
  
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
